--- a/data/pc/latest/proto.yml
+++ b/data/pc/latest/proto.yml
@@ -2571,28 +2571,38 @@
       entityId: varint
       properties: []varint
          key: varint =>
-         - generic.armor
-         - generic.armor_toughness
-         - generic.attack_damage
-         - generic.attack_knockback
-         - generic.attack_speed
-         - player.block_break_speed
-         - player.block_interaction_range
-         - player.entity_interaction_range
-         - generic.fall_damage_multiplier
-         - generic.flying_speed
-         - generic.follow_range
-         - generic.gravity
-         - generic.jump_strength
-         - generic.knockback_resistance
-         - generic.luck
-         - generic.max_absorption
-         - generic.max_health
-         - generic.movement_speed
-         - generic.safe_fall_distance
-         - generic.scale
-         - zombie.spawn_reinforcements
-         - generic.step_height
+            - armor
+            - armor_toughness
+            - attack_damage
+            - attack_knockback
+            - attack_speed
+            - block_break_speed
+            - block_interaction_range
+            - burning_time
+            - explosion_knockback_resistance
+            - entity_interaction_range
+            - fall_damage_multiplier
+            - flying_speed
+            - follow_range
+            - gravity
+            - jump_strength
+            - knockback_resistance
+            - luck
+            - max_absorption
+            - max_health
+            - mining_efficiency
+            - movement_efficiency
+            - movement_speed
+            - oxygen_bonus
+            - safe_fall_distance
+            - scale
+            - sneaking_speed
+            - spawn_reinforcements
+            - step_height
+            - submerged_mining_speed
+            - sweeping_damage_ratio
+            - tempt_range
+            - water_movement_efficiency
          value: f64
          modifiers: []varint
             uuid: string
