--- a/data/pc/1.21.3/proto.yml
+++ b/data/pc/1.21.3/proto.yml
@@ -934,7 +934,10 @@
       tameTexture: string
       angryTexture: string
       biome: IDSet
-
+   MovementFlags: [ "bitflags", {
+      "type": "restBuffer",
+      "flags": [ "onGround", "hasHorizontalCollision" ]
+   } ]
    entityMetadata: ["entityMetadataLoop", { "endVal": 255, "type": "entityMetadataEntry" }]
    tags: []varint
       tagName: string
@@ -3074,10 +3077,6 @@
    packet_lock_difficulty:
       locked: bool
 
-   MovementFlags: ["bitflags", {
-      "type": "u8",
-      "flags": ["onGround", "hasHorizontalCollision"]
-   }]
    # MC: ServerboundMovePlayerPacket.Pos
    packet_position:
       x: f64
