--- a/data/pc/latest/proto.yml
+++ b/data/pc/latest/proto.yml
@@ -934,10 +934,7 @@
       tameTexture: string
       angryTexture: string
       biome: IDSet
-   MovementFlags: [ "bitflags", {
-      "type": "restBuffer",
-      "flags": [ "onGround", "hasHorizontalCollision" ]
-   } ]
+
    entityMetadata: ["entityMetadataLoop", { "endVal": 255, "type": "entityMetadataEntry" }]
    tags: []varint
       tagName: string
@@ -3078,6 +3075,10 @@
    packet_lock_difficulty:
       locked: bool
 
+   MovementFlags: ["bitflags", {
+      "type": "u8",
+      "flags": ["onGround", "hasHorizontalCollision"]
+   }]
    # MC: ServerboundMovePlayerPacket.Pos
    packet_position:
       x: f64
