--- a/data/pc/latest/proto.yml
+++ b/data/pc/latest/proto.yml
@@ -2294,7 +2294,7 @@
       viewDistance: varint
    # MC: ClientboundSetCursorItemPacket
    packet_set_cursor_item:
-      contents?: Slot
+      contents: Slot
    # MC: ClientboundSetDefaultSpawnPositionPacket
    packet_spawn_position:
       location: position
@@ -2389,8 +2389,8 @@
       passengers: varint[]varint
    # MC: ClientboundSetPlayerInventoryPacket
    packet_set_player_inventory:
-      slotId: varint
-      contents?: Slot
+      slotId: optvarint
+      contents: Slot
    # MC: ClientboundSetPlayerTeamPacket
    packet_teams:
       team: string
