--- a/data/pc/1.21.3/proto.yml
+++ b/data/pc/1.21.3/proto.yml
@@ -2568,38 +2568,39 @@
             criterionIdentifier: string
             criterionProgress?: i64
    # MC: ClientboundUpdateAttributesPacket
+   # the prefixes for old packets have been kept, as old code might rely on it
    packet_entity_update_attributes:
       entityId: varint
       properties: []varint
          key: varint =>
-            - armor
-            - armor_toughness
-            - attack_damage
-            - attack_knockback
-            - attack_speed
-            - block_break_speed
-            - block_interaction_range
+            - generic.armor
+            - generic.armor_toughness
+            - generic.attack_damage
+            - generic.attack_knockback
+            - generic.attack_speed
+            - player.block_break_speed
+            - player.block_interaction_range
             - burning_time
             - explosion_knockback_resistance
-            - entity_interaction_range
-            - fall_damage_multiplier
-            - flying_speed
-            - follow_range
-            - gravity
-            - jump_strength
-            - knockback_resistance
-            - luck
-            - max_absorption
-            - max_health
+            - player.entity_interaction_range
+            - generic.fall_damage_multiplier
+            - generic.flying_speed
+            - generic.follow_range
+            - generic.gravity
+            - generic.jump_strength
+            - generic.knockback_resistance
+            - generic.luck
+            - generic.max_absorption
+            - generic.max_health
             - mining_efficiency
             - movement_efficiency
-            - movement_speed
+            - generic.movement_speed
             - oxygen_bonus
-            - safe_fall_distance
-            - scale
+            - generic.safe_fall_distance
+            - generic.scale
             - sneaking_speed
-            - spawn_reinforcements
-            - step_height
+            - zombie.spawn_reinforcements
+            - generic.step_height
             - submerged_mining_speed
             - sweeping_damage_ratio
             - tempt_range
