fix explosion packet
Signed-off-by: Edvin Bryntesson <epost@edvinbryntesson.se>

--- a/data/pc/1.21.3/proto.yml
+++ b/data/pc/1.21.3/proto.yml
@@ -1838,8 +1838,8 @@
       onGround: bool
    # MC: ClientboundExplodePacket
    packet_explosion:
-      center: vec3f
-      playerKnockback?: vec3f
+      center: vec3f64
+      playerKnockback?: vec3f64
       explosionParticle: Particle
       soundId: varint
       _: soundId ?
